# FHTW-AI25-SoftwareEngineering

./: .env.docker.example  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  openapi.yml  post_service.py  pyproject.toml  team_log.md  test_post_service.py
.github/workflows/: backend-docker-build.yml  backend-docker-publish.yml  build-and-push-backend.yml  build-and-run-backend.yml  ci.yml  docker-build.yml  docker-publish.yml  dokcer-build.yml  tests.yml
app/: api.py  main.py  service.py
backend/: Dockerfile  openapi.json  openapi.yml  pyproject.toml
backend/app/: db.py  describe_results_consumer.py  events.py  main.py  models.py  queue.py  routes.py  schemas.py  service.py
backend/tests/: conftest.py  test_api_posts.py  test_service_posts.py
db/: init.sql
describe-worker/: Dockerfile  describe_worker.py  pyproject.toml
describe-worker/tests/: test_describe_worker.py
frontend/social-frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
frontend/social-frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/social-frontend/src/app/models/: post.ts
frontend/social-frontend/src/app/services/: post.ts  (+1 more)
frontend/social-frontend/src/environments/: environment.prod.ts
resize-worker/: Dockerfile  pyproject.toml  resize_worker.py
resize-worker/tests/: test_resize_image.py
sentiment-worker/: Dockerfile  pyproject.toml  sentiment_worker.py
tests/: conftest.py  test_api_posts.py  test_posts.py  test_service_posts.py
worker/: Dockerfile  pyproject.toml  worker.py
worker/tests/: test_resize_image.py
(+17 files in other folders)
