[project]
name = "social-describe-worker"
version = "0.1.0"
description = "RabbitMQ worker that generates image descriptions via Gemini"
requires-python = ">=3.12"
dependencies = [
  "pika>=1.3.2",
  "httpx>=0.28.1",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]
