[project]
name = "sentiment-worker"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "pika>=1.3.2",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "transformers",
  "torch",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.uv]
# intentionally empty – مثل resize-worker و describe-worker
